# jobless

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  prek.toml  pyproject.toml
scripts/: populate_db.py
src/jobless/: app.py  cli.py  constants.py  context.py  db.py  enums.py  export.py  global.tcss  main.py  mapper.py  models.py  repositories.py  schemas.py  settings.py  utils.py
src/jobless/commands/: __init__.py  applications.py  companies.py  contacts.py  export.py  prune.py  skills.py  utils.py
src/jobless/services/: contacts.py
src/jobless/widgets/: confirmation.py  confirmation_modal.py  datatables.py  header.py  modals.py  new_modal.py
src/jobless/widgets/modals/: base_form_modal.py  base_form_modals.py  confirmation_modal.py  create_modals.py
tests/: conftest.py  factories.py  test_db.py  test_jobless.py  test_mapper.py  test_models.py  test_repositories.py  test_schemas.py
