[project]
name = "jobless"
version = "0.17.0"
authors = [{ name = "dnlzrgz", email = "contact@dnlzrgz.com" }]
license = "MIT"
description = "A simple job application manager for your terminal."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "email-validator>=2.3.0",
  "python-dotenv>=1.2.1",
  "sqlalchemy>=2.0.46",
  "typer>=0.25.1",
]
keywords = ["tui", "job-search", "job", "productivity", "textual", "sqlite"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business",
  "Topic :: Terminals",
]

[project.urls]
homepage = "https://dnlzrgz.com/projects/jobless/"
source = "https://github.com/dnlzrgz/jobless"
issues = "https://github.com/dnlzrgz/jobless/issues"
releases = "https://github.com/dnlzrgz/jobless/releases"

[project.scripts]
jobless = "jobless:main.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "commitizen>=4.11.0",
  "factory-boy>=3.3.3",
  "faker>=40.1.0",
  "prek>=0.3.4",
  "pytest>=9.0.2",
  "ruff>=0.14.10",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
